# ai-assistants

./: .gitignore  Ada_Resources.md  CLAUDE.md  README.md  main.py  main2.py  pyproject.toml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: convert.py
app/core/: config.py  exceptions.py
app/services/: openai_client.py
backend/: DEPLOYMENT.md  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/app/: main.py
backend/app/api/v1/endpoints/: convert.py
backend/app/core/: config.py
backend/app/services/: ada_converter.py
backend/tests/core/: test_config.py  test_exceptions.py
backend/tests/services/: test_ada_converter.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: .env.production  App.tsx
frontend/src/components/: CodeDisplay.test.tsx  CodeDisplay.tsx  FileUpload.test.tsx  FileUpload.tsx
frontend/src/config/: client.ts
frontend/src/services/: api.test.ts  api.ts
frontend/src/types/: api.ts
src/: ada_converter.py  api.py  chatbot.py
tests/: conftest.py  test_ada_converter.py  test_api.py  test_chatbot.py
tests/api/v1/endpoints/: test_convert.py
tests/services/: test_ada_converter.py  test_openai_client.py
